// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThinkingMessage > filters out progress dots and empty lines 1`] = `
" Thought 
 │
 │ Thinking
 │ .
 │ ..
 │ ...
 │ Done
"
`;

exports[`ThinkingMessage > filters out progress dots and empty lines 2`] = `
" Thought 
 │
 │ Thinking
 │ .
 │ ..
 │ ...
 │ Done"
`;

exports[`ThinkingMessage > keeps description lines verbatim when subject is empty (OpenAI path) 1`] = `
" │
 │ Step one:
 │     indented detail stays
 │   two-space indent
"
`;

exports[`ThinkingMessage > keeps description lines verbatim when subject is empty (OpenAI path) 2`] = `
" │
 │ Step one:
 │     indented detail stays
 │   two-space indent"
`;

exports[`ThinkingMessage > normalizes escaped newline tokens 1`] = `
" Thought 
 │
 │ Matching the Blocks
 │ Some more text
"
`;

exports[`ThinkingMessage > normalizes escaped newline tokens 2`] = `
" Thought 
 │
 │ Matching the Blocks
 │ Some more text"
`;

exports[`ThinkingMessage > renders "Thought" header when isFirstThinking is true 1`] = `
" Thought 
 │
 │ Summary line
 │ First body line
"
`;

exports[`ThinkingMessage > renders "Thought" header when isFirstThinking is true 2`] = `
" Thought 
 │
 │ Summary line
 │ First body line"
`;

exports[`ThinkingMessage > renders compact mode as a single headline line with hidden-line count 1`] = `
" Thought 
 │ Let me analyze the request. (+2 lines)
"
`;

exports[`ThinkingMessage > renders compact mode as a single headline line with hidden-line count 2`] = `
" Thought 
 │ Let me analyze the request. (+2 lines)"
`;

exports[`ThinkingMessage > renders compact mode without a line count for single-line thoughts 1`] = `
" Thought 
 │ Only one line of reasoning
"
`;

exports[`ThinkingMessage > renders compact mode without a line count for single-line thoughts 2`] = `
" Thought 
 │ Only one line of reasoning"
`;

exports[`ThinkingMessage > renders full mode with left border and full text 1`] = `
" Thought 
 │
 │ Planning
 │ I am planning the solution.
"
`;

exports[`ThinkingMessage > renders full mode with left border and full text 2`] = `
" Thought 
 │
 │ Planning
 │ I am planning the solution."
`;

exports[`ThinkingMessage > renders multiple thinking messages sequentially correctly 1`] = `
" Thought 
 │
 │ Initial analysis
 │ This is a multiple line paragraph for the first thinking message of how the
 │ model analyzes the problem.
 │
 │ Planning execution
 │ This a second multiple line paragraph for the second thinking message
 │ explaining the plan in detail so that it wraps around the terminal display.
 │
 │ Refining approach
 │ And finally a third multiple line paragraph for the third thinking message to
 │ refine the solution.
"
`;

exports[`ThinkingMessage > renders multiple thinking messages sequentially correctly 2`] = `
" Thought 
 │
 │ Initial analysis
 │ This is a multiple line paragraph for the first thinking message of how the
 │ model analyzes the problem.
 │
 │ Planning execution
 │ This a second multiple line paragraph for the second thinking message
 │ explaining the plan in detail so that it wraps around the terminal display.
 │
 │ Refining approach
 │ And finally a third multiple line paragraph for the third thinking message to
 │ refine the solution."
`;

exports[`ThinkingMessage > renders subject line with vertical rule and "Thought" header 1`] = `
" Thought 
 │
 │ Planning
 │ test
"
`;

exports[`ThinkingMessage > renders subject line with vertical rule and "Thought" header 2`] = `
" Thought 
 │
 │ Planning
 │ test"
`;

exports[`ThinkingMessage > uses description when subject is empty 1`] = `
" Thought 
 │
 │ Processing details
 │ Checking the second step
 │ Finalizing the result
"
`;

exports[`ThinkingMessage > uses description when subject is empty 2`] = `
" Thought 
 │
 │ Processing details
 │ Checking the second step
 │ Finalizing the result"
`;
